Updated the files to execute on Azure VM with Jenkins